screen.css
/*
red: #6b0808
green: #669933
beige: #cfccaa
*/

@font-face {
    font-family: 'Oxygen';
    font-style: normal;
    font-weight: 400;
    src: local('Oxygen'), local('Oxygen-Regular'), url(https://themes.googleusercontent.com/static/fonts/oxygen/v2/eAWT4YudG0otf3rlsJD6zOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
}

body {
    margin: 0;
    background: #fff; /*#cfccaa;*/
    font-size: 10px;
}
body > header, body > nav ul, body > main, body > footer {
    margin: 0 auto;
    padding: 0;
    width: 300px;
}

/*body > header {
    background: url("http://www.pierce.ctc.edu/dept/interpreter/ref/images/banner.jpg") no-repeat right;
}*/

h1 {
    margin: 0;
    font-family: "Georgia", serif;
    display: none;
}

h1:after {
    content: " default";
}

#logo {
    width: 6em;
    top: .5em;
    position: absolute;
    left: 1em;
}

body > nav {
    background: #bada55;
    font: 1em "Oxygen", sans-serif;
    border-bottom: .25em solid #669933;
}
body > nav li:first-child {
    margin-left: 25%;
}
body > nav li {
    list-style: none;
    display: inline-block;
    width: 15%;
}
body > nav a {
    padding: 1.5em 0 .25em;
    width: 100%;
    display: inline-block;
    text-align: center;
    border-bottom: .25em solid #669933;
    margin-bottom: -.25em;
    text-decoration: none;
    color: #336600;
}
body > nav ul:hover .current a {
    border-bottom-color: #669933;
    color: #336600;
}
body > nav .current a, body > nav a:hover, body > nav ul .current a:hover, body > nav a:focus {
    border-bottom-color: #000;
    color: #000;
    outline: 0;
}

h2 {
    margin: .25em 0;
    border-bottom: .125em solid black;
    font-family: "Georgia", serif;
}
h3 {
    margin: .25em 0;
    border-bottom: .11em solid black;
    font-family: "Georgia", serif;
}
main p, main ul, main input, main select, main textarea {
    font: 1em "Georgia", serif;
}

main form label {
    display: block;
}
main form input:not([type=radio]), main form textarea {
    border-radius: 5px;
    border: 2px solid #6b0808;
    width: 350px;
    font-family: "Oxygen", sans-serif;
}
main form input:focus, main form textarea:focus {
    border-color: orange;
    outline: 0;
}
main form fieldset {
    border-color: black;
    border-bottom: 0;
    border-left: 0;
    border-right: 0;
}

/* == media querries == */

@media (min-width: 320px) { h1:after {content:" min 320";}

body {
    font-size: 12px;
}
body > header, body > nav ul, body > main, body > footer {
    width: 300px;
}

}

@media (min-width: 480px) { h1:after {content:" min 480";} /*iPhone 5: 568px*/

body {
    font-size: 16px;
}
body > header, body > nav ul, body > main, body > footer {
    width: 460px;
}

}

@media (min-width: 640px) { h1:after {content:" min 640";}

body {
    font-size: 20px;
}
body > header, body > nav ul, body > main, body > footer {
    width: 620px;
}

}

@media (min-width: 800px) { h1:after {content:" min 800";}

body {
    font-size: 24px;
}
body > header, body > nav ul, body > main, body > footer {
    width: 780px;
}

}

@media (min-width: 1000px) { h1:after {content:" min 800";}

body > nav ul {
    width: 980px;
}

}

